Dialogs in Android

--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -22,6 +22,7 @@
 
     <TableRow>
         <Button android:text="Button6"
+            android:id="@+id/button6"
             android:layout_span="2"/>
 
     </TableRow>
